--- a/css/styles.css
+++ b/css/styles.css
@@ -4035,7 +4035,7 @@ textarea.form-control-lg {
   justify-content: space-between;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  background-color: #0df0cc33;
+  /* background-color: #0df0cc33; */
 }
 .navbar > .container,
 .navbar > .container-fluid,
@@ -4050,10 +4050,12 @@ textarea.form-control-lg {
   justify-content: space-between;
 }
 .navbar-brand {
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  font-family:Didot !important;
+  /* padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem; */
+  color: #08CAED !important;
   margin-right: 1rem;
-  font-size: 1.25rem;
+  font-size: 20px;
   text-decoration: none;
   white-space: nowrap;
 }
@@ -7841,12 +7843,12 @@ textarea.form-control-lg {
 
 .bg-light {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) ;
+  background-color: rgba(var(--bs-white), var(--bs-bg-opacity)) !important;
 }
 
 .bg-dark {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgba(var(--bs-white), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
@@ -11290,10 +11292,10 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.features-icons {
+/* .features-icons {
   padding-top: 7rem;
   padding-bottom: 7rem;
-}
+} */
 .features-icons .features-icons-item {
   max-width: 20rem;
 }
@@ -11382,4 +11384,10 @@ header.masthead h1, header.masthead .h1 {
 footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.padding {
+  background-color: #08CAED !important;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
